<resources>
    <string name="app_name">CashRegister</string>
    <string name="main_cart_items_text">Add Items To Cart</string>
    <string name="main_available_items_header">Available Items</string>
    <string name="main_shopping_cart_header">Shopping Cart</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="new_product">New Product</string>
    <string name="cancel">Cancel</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_code_hint">Code - ie. \"A12T4G7YQPL93N4M\"</string>
    <string name="product_price_hint">Price - ie. 9.25</string>
    <string name="main_checkout_btn">Checkout</string>
    <string name="dialog_checkout_price_format">Total: %s</string>
    <string name="dialog_checkout_title">Checkout</string>
    <string name="dialog_checkout_pay">Pay</string>
    <string name="dialog_product_manually_add_code">Manually Add Code</string>
    <string name="dialog_product_automatically_add_code">Automatically Generate Code</string>
    <string name="finish">Finish</string>
    <string name="validation_name_empty">Name Must Have A Value</string>
    <string name="validation_name_exits">Name Already Exists</string>
    <string name="validation_price_format">Price Not Valid</string>
    <string name="validation_price_empty">Price Must Have A Value</string>
    <string name="validation_code_exists">Product Code Exists</string>
    <string name="validation_code_empty">Product Code Must Have A Value</string>
    <string name="validation_code_mismatch">Product Code Should be 16 alphanumeric Characters</string>
</resources>
