<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="4dp"
              android:paddingStart="8dp"
              android:paddingEnd="8dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/product_name_hint"
        android:ems="10"
        android:id="@+id/dialog_product_name_et"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/product_price_hint"
        android:ems="10"
        android:id="@+id/dialog_product_price_et"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/product_code_hint"
        android:ems="10"
        android:id="@+id/dialog_product_code_et"
        android:layout_gravity="center_horizontal"
        android:maxLength="16"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_manually_add_code"
        android:id="@+id/dialog_product_code_btn"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>