<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="match_parent">

    <TextView
        style="@style/main_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_available_items_header"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_all_products_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewProduct"
            android:text="@string/new_product"
            android:id="@+id/main_new_product_btn"/>

        <Button
            android:id="@+id/main_checkout_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="checkOut"
            android:text="@string/main_checkout_btn"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>